--- a/admin/package.json
+++ b/admin/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@sweetalert2/ngx-sweetalert2": "^7.3.0",
     "angular-bootstrap-md": "^8.9.0",
     "mdbootstrap": "^4.12.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.7.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
