deploy db and api to azure

--- a/movie-review-api/src/main/resources/application.properties
+++ b/movie-review-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=movieReview
-spring.datasource.username=sa
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:sqlserver://thanhserver1203.database.windows.net:1433;database=movieReview;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=thanh@thanhserver1203
+spring.datasource.password=prodb@123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
