--- a/movie-review-api/src/main/resources/application.properties
+++ b/movie-review-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:sqlserver://thanhserver1203.database.windows.net:1433;database=movieReview;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=thanh@thanhserver1203
+spring.datasource.url=jdbc:sqlserver://SQL5045.site4now.net:1433;database=DB_A57912_movieReview
+spring.datasource.username=DB_A57912_movieReview_admin
 spring.datasource.password=prodb@123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
