--- a/movie-review-api/src/main/resources/application.properties
+++ b/movie-review-api/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
 server.port=8989
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+jwt.secret=javainuse
